Service Pages added
scroll-down added to navbar
four pages added for details about different services.
.secondNav added to css for service page navbar

--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -59,6 +59,10 @@ a {
   }
 }
 
+dropdown-item {
+  color: black;
+}
+
 #mainNav {
   font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
