--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -91,6 +91,46 @@ a:focus, a:hover {
   background-color: transparent;
 }
 
+#secondNav {
+  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: black;
+}
+
+#secondNav .navbar-toggler {
+  font-size: 14px;
+  padding: 11px;
+  color: white;
+  border: 1px solid white;
+}
+
+#secondNav .navbar-brand {
+  font-weight: 700;
+}
+
+#secondNav a {
+  color: white;
+}
+
+#secondNav .navbar-nav .nav-item {
+  -webkit-transition: background 0.3s ease-in-out;
+  -moz-transition: background 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out;
+}
+
+#secondNav .navbar-nav .nav-item:hover {
+  color: fade(white, 80%);
+  outline: none;
+  background-color: transparent;
+}
+
+#secondNav .navbar-nav .nav-item:active, #secondNav .navbar-nav .nav-item:focus {
+  outline: none;
+  background-color: black;
+}
+
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 20px;
